[workspace]
resolver = "2"
members = [
  "layershellev",
  "iced_layershell",
  "iced_layershell_macros",
  "iced_sessionlock",
  "iced_sessionlock_macros",
  "starcolorkeyboard",
  "sessionlockev",
  "waycrate_xkbkeycode",
  "iced_exdevtools",
  "iced_examples/*",
]

[workspace.package]
authors = [
  "Decodertalkers <aakari@tutanota.com>",
  "Aakash Sen Sharma <aakashsensharma@gmail.com>",
]
edition = "2024"
version = "0.13.99"
license = "MIT"
repository = "https://github.com/waycrate/exwlshelleventloop"
description = "Wayland extra shell lib"
keywords = ["wayland", "wlroots"]
readme = "README.md"

[workspace.dependencies]
layershellev = { path = "./layershellev" }
sessionlockev = { path = "./sessionlockev" }

iced_layershell = { path = "./iced_layershell" }
iced_exdevtools = { path = "./iced_exdevtools" }
iced_layershell_macros = { path = "./iced_layershell_macros" }
iced_sessionlock = { path = "./iced_sessionlock" }
iced_sessionlock_macros = { path = "./iced_sessionlock_macros" }
waycrate_xkbkeycode = { path = "./waycrate_xkbkeycode" }

tempfile = "3.20.0"
thiserror = "2.0.12"
wayland-client = { version = "0.31.7" }

wayland-protocols = { version = "0.32.5", default-features = false, features = [
  "unstable",
  "staging",
  "client",
] }
tracing-subscriber = { version = "0.3.18", features = ["std", "env-filter"] }

wayland-cursor = "0.31.7"

wayland-protocols-wlr = { version = "0.3.5", default-features = false, features = [
  "client",
] }

wayland-protocols-misc = { version = "0.3.5", features = ["client"] }
wayland-backend = { version = "0.3.7", features = ["client_system"] }

#sctk = { package = "smithay-client-toolkit", version = "0.19.2", features = [
#  "calloop",
#] }

calloop = "0.14.1"
calloop-wayland-source = "0.4.0"

rwh_05 = { package = "raw-window-handle", version = "0.5.2", features = [
  "std",
] }
rwh_06 = { package = "raw-window-handle", version = "0.6", features = ["std"] }

#iced = "0.13.99"
iced = { git = "https://github.com/project-gauntlet/iced.git", branch = "gauntlet-0.13.1", default-features = false }
#iced_runtime = "0.13.99"
iced_runtime = { git = "https://github.com/project-gauntlet/iced.git", branch = "gauntlet-0.13.1" }
#iced_core = "0.13.99"
iced_core = { git = "https://github.com/project-gauntlet/iced.git", branch = "gauntlet-0.13.1" }
#iced_program = "0.13.99"
iced_program = { git = "https://github.com/project-gauntlet/iced.git", branch = "gauntlet-0.13.1" }
#iced_renderer = "0.13.99"
iced_renderer = { git = "https://github.com/project-gauntlet/iced.git", branch = "gauntlet-0.13.1" }
#iced_futures = "0.13.99"
iced_futures = { git = "https://github.com/project-gauntlet/iced.git", branch = "gauntlet-0.13.1" }
#iced_graphics = "0.13.99"
iced_graphics = { git = "https://github.com/project-gauntlet/iced.git", branch = "gauntlet-0.13.1" }
#iced_debug = "0.13.99"
iced_debug = { git = "https://github.com/project-gauntlet/iced.git", branch = "gauntlet-0.13.1" }
#iced_devtools = "0.13.99"
iced_devtools = { git = "https://github.com/project-gauntlet/iced.git", branch = "gauntlet-0.13.1" }
#iced_widget = "0.13.99"
iced_widget = { git = "https://github.com/project-gauntlet/iced.git", branch = "gauntlet-0.13.1" }

window_clipboard = "0.4.1"

bitflags = "2.9.0"
log = "0.4.22"
enumflags2 = "0.7.11"

xkbcommon-dl = "0.4.2"
smol_str = "0.2.2"     #NOTE: follow iced
memmap2 = "0.9.5"

tracing = "0.1.40"
futures = "0.3.31"

darling = { version = "0.20.10", features = ["suggestions"] }
manyhow = { version = "0.11.4", features = ["darling"] }
proc-macro2 = "1.0.89"
quote = "1.0.37"
syn = { version = "2.0.87", features = ["full"] }

#[patch.crates-io]
#iced = { path = "../../RustroverProjects/iced-fork" }
#iced_runtime = { path = "../../RustroverProjects/iced-fork/runtime" }
#iced_core = { path = "../../RustroverProjects/iced-fork/core" }
#iced_program = { path = "../../RustroverProjects/iced-fork/program" }
#iced_renderer = { path = "../../RustroverProjects/iced-fork/renderer" }
#iced_futures = { path = "../../RustroverProjects/iced-fork/futures" }
#iced_graphics = { path = "../../RustroverProjects/iced-fork/graphics" }
#iced_debug = { path = "../../RustroverProjects/iced-fork/debug" }
#iced_devtools = { path = "../../RustroverProjects/iced-fork/devtools" }
#iced_widget = { path = "../../RustroverProjects/iced-fork/widget" }
